--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
+    <string name="invalid_username_password">Please provide a valid email and password.</string>
+    <string name="error_login">An error occurred while trying to login</string>
 </resources>
