--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="invalid_username_password">Please provide a valid email and password.</string>
     <string name="home">Home</string>
     <string name="my_guilde">My Guilde</string>
-    <string name="my_contributions">My contributions</string>
+    <string name="my_contributions">My Contributions</string>
     <string name="make_contribution">Make Contribution</string>
     <string name="all_contributions">All Contributions</string>
     <string name="profile">Profile</string>
