create home ui and guilde layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="all_contributions">All Contributions</string>
     <string name="profile">Profile</string>
     <string name="sign_out">Sign out</string>
+    <string name="guilde_logo">Guilde logo</string>
 </resources>
