add ui for guilde details fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="guilde_logo">Guilde logo</string>
     <string name="view_all">Veiw All</string>
     <string name="view_less">Veiw Less</string>
+    <string name="contributions">Contributions</string>
+    <string name="points">Points</string>
 </resources>
