--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="guilde_logo">Guilde logo</string>
     <string name="view_all">Veiw All</string>
     <string name="view_less">Veiw Less</string>
-    <string name="contributions">Contributions</string>
+    <string name="contributors">Contributors</string>
     <string name="points">Points</string>
+    <string name="user_pic">User picture</string>
 </resources>
