--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,6 @@
     <string name="contributors">Contributors</string>
     <string name="points">Points</string>
     <string name="user_pic">User picture</string>
-    <string name="site_name_placeholder">RABAT</string>
-    <string name="tv_vos_contributions">Vos Contributions</string>
+    <string name="your_contributions">Vos Contributions</string>
     <string name="submit">soumettre</string>
 </resources>
