--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,8 @@
     <string name="user_pic">User picture</string>
     <string name="your_contributions">Vos Contributions</string>
     <string name="submit">soumettre</string>
+
+    <string name="profile_tootlbar_title">Profil</string>
+    <string name="make_contrib_tootlbar_title">Contribution</string>
+    <string name="home_tootlbar_title">Accueil</string>
 </resources>
