--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
     <string name="breakfast_iscm">Petit déjeuner ISCM </string>
     <string name="contribution_project_OneISC">Contribution au projet de Transformation OneISC </string>
     <string name="english_participation">Participation Session Anglais </string>
-    <string name="english_session_organisation">Organiser Session Anglais </string>
+    <string name="english_session_organisation">Organiser Session Anglais</string>
     <string name="meetup_organisation">Organiser un Meetup </string>
     <string name="creation_dt_asset">Création Asset DT </string>
     <string name="participation_dt_asset">Participation Asset DT </string>
@@ -68,6 +68,9 @@
     <string name="user_error_msg">Error getting users</string>
     <string name="loading_submissions_msg">Loading Your Submissions…</string>
     <string name="contributions_empty">Pas de contributions</string>
+    <string name="validate">Valider</string>
+    <string name="lorem_small">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
+    <string name="lorem_medium">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
 
     <string-array name="submissions_types">
         <item>@string/article</item>
