--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,7 +75,7 @@
     <string name="tv_contributions_total">Contributions Total</string>
     <string name="ntework_error_msg">Network Error</string>
     <string name="server_error_msg">Try later please</string>
-    <string name="contributions_points">Points d\'activite</string>
+    <string name="contributions_points">Points d\'activitée</string>
     <string name="by_label">Par:</string>
     <string name="guilde_label">Guilde:</string>
 
